--- a/style.css
+++ b/style.css
@@ -195,6 +195,8 @@ img:first-child {
 }
 
 .projects {
+  display: flex;
+  flex-direction: column;
   margin: auto;
   padding: 10px;
   width: 60%;
@@ -213,7 +215,7 @@ img:first-child {
   width: 400px;
 }
 
-.aboutGame {
+.aboutProject {
   border: 1px solid black;
   padding: 40px;
   text-align: center;
@@ -221,16 +223,19 @@ img:first-child {
   background-color: rgb(52, 52, 52);
 }
 
-.aboutGame .first {
+.aboutProject .first {
   letter-spacing: 2px;
   margin-left: 3px;
   font-size: 14px;
 }
 
-.aboutGame p {
+.aboutProject p {
   margin-top: 10px;
 }
 
+.clock {
+  margin-top: 20px;
+}
 .fab,
 .fas {
   color: white;
