--- a/style.css
+++ b/style.css
@@ -378,6 +378,17 @@ form h4 {
   width: 100%;
 }
 
+.contact-icons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin-top: 20px;
+}
+
+.contact-icons a img {
+  width: 50px;
+}
+
 .logo img {
   width: 180px;
 }
